--- a/topografiya/templates/index.html
+++ b/topografiya/templates/index.html
@@ -81,7 +81,7 @@
                                                                                     <td>{{ work.customer_info}}</td>
                                                                                     <td>{{ work.object_name}}</td>
                                                                                     <td>{{ work.work_type}}</td>
-                                                                                    <td>{{ work.work_term}} kun</td>
+                                                                                    <td>{{ work.work_term}} {% trans "День" %}</td>
 {#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
 
                                                                                     <td class="text-center"><a href="{% url 'status_work' id=work.id %}" class="btn btn-success">{% trans "Просмотр" %}</a></td>
@@ -150,7 +150,7 @@
                                                                                     <td>{{ work.pdowork.customer_info}}</td>
                                                                                     <td>{{ work.pdowork.object_name}}</td>
                                                                                     <td>{{ work.pdowork.work_type}}</td>
-                                                                                    <td>{{ work.pdowork.work_term}} kun</td>
+                                                                                    <td>{{ work.pdowork.work_term}} {% trans "День" %}</td>
 {#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
                                                                                     <td class="text-center"><a href="{% url 'status_work' id=work.pdowork.id %}" class="btn btn-success">{% trans "Просмотр" %}</a></td>
                                                                           </tr>
@@ -214,7 +214,7 @@
                                                                                     <td>{{ work.object.pdowork.customer_info}}</td>
                                                                                     <td>{{ work.object.pdowork.object_name}}</td>
                                                                                     <td>{{ work.object.pdowork.work_type}}</td>
-                                                                                    <td>{{ work.object.pdowork.work_term}} kun</td>
+                                                                                    <td>{{ work.object.pdowork.work_term}} {% trans "День" %}</td>
 {#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
                                                                                     <td class="text-center"><a href="{% url 'status_work' id=work.object.pdowork.id %}" class="btn btn-success">{% trans "Просмотр" %}</a></td>
                                                                           </tr>
@@ -276,7 +276,7 @@
                                                                                     <td>{{ work.object.pdowork.customer_info}}</td>
                                                                                     <td>{{ work.object.pdowork.object_name}}</td>
                                                                                     <td>{{ work.object.pdowork.work_type}}</td>
-                                                                                    <td>{{ work.object.pdowork.work_term}} kun</td>
+                                                                                    <td>{{ work.object.pdowork.work_term}} {% trans "День" %}</td>
 {#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
                                                                                     <td class="text-center"><a href="{% url 'status_work' id=work.object.pdowork.id %}" class="btn btn-success">{% trans "Просмотр" %}</a></td>
                                                                           </tr>
@@ -338,7 +338,7 @@
                                                                                     <td>{{ work.object.pdowork.customer_info}}</td>
                                                                                     <td>{{ work.object.pdowork.object_name}}</td>
                                                                                     <td>{{ work.object.pdowork.work_type}}</td>
-                                                                                    <td>{{ work.object.pdowork.work_term}} kun</td>
+                                                                                    <td>{{ work.object.pdowork.work_term}} {% trans "День" %}</td>
 {#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
 
                                                                                     <td class="text-center"><a href="{% url 'status_work' id=work.object.pdowork.id %}" class="btn btn-success">{% trans "Просмотр" %}</a></td>
@@ -403,7 +403,7 @@
                                                                                     <td>{{ work.object.pdowork.customer_info}}</td>
                                                                                     <td>{{ work.object.pdowork.object_name}}</td>
                                                                                     <td>{{ work.object.pdowork.work_type}}</td>
-                                                                                    <td>{{ work.object.pdowork.work_term}} kun</td>
+                                                                                    <td>{{ work.object.pdowork.work_term}} {% trans "День" %}</td>
 {#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
 
                                                                                     <td class="text-center"><a href="{% url 'status_work' id=work.object.pdowork.id %}" class="btn btn-success">{% trans "Просмотр" %}</a></td>
@@ -468,7 +468,7 @@
                                                                                     <td>{{ work.object.pdowork.customer_info}}</td>
                                                                                     <td>{{ work.object.pdowork.object_name}}</td>
                                                                                     <td>{{ work.object.pdowork.work_type}}</td>
-                                                                                    <td>{{ work.object.pdowork.work_term}} kun</td>
+                                                                                    <td>{{ work.object.pdowork.work_term}} {% trans "День" %}</td>
 {#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
 
                                                                                     <td class="text-center"><a href="{% url 'status_work' id=work.object.pdowork.id %}" class="btn btn-success">{% trans "Просмотр" %}</a></td>
@@ -531,7 +531,7 @@
                                                                                     <td>{{ work.object.pdowork.customer_info}}</td>
                                                                                     <td>{{ work.object.pdowork.object_name}}</td>
                                                                                     <td>{{ work.object.pdowork.work_type}}</td>
-                                                                                    <td>{{ work.object.pdowork.work_term}} kun</td>
+                                                                                    <td>{{ work.object.pdowork.work_term}} {% trans "День" %}</td>
 {#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
 
                                                                                     <td class="text-center"><a href="{% url 'status_work' id=work.object.pdowork.id %}" class="btn btn-success">{% trans "Просмотр" %}</a></td>
