--- a/topografiya/templates/leader/pdo_works.html
+++ b/topografiya/templates/leader/pdo_works.html
@@ -15,7 +15,7 @@
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-12">
-                            <h3>{% trans "Новые договора" %}</h3>
+                            <h3>{% trans "Новые договора" %} </h3>
                         </div>
                     </div>
                 </div>
@@ -81,8 +81,10 @@
                     {% endfor %}
 
 
+                    </div>
+
                 </div>
             </div>
-        </div>
+{#        </div>#}
 
         {% endblock %}
