--- a/topografiya/templates/geodezis/head_komeral/show_komeral_work.html
+++ b/topografiya/templates/geodezis/head_komeral/show_komeral_work.html
@@ -811,7 +811,7 @@
     data.append('id',{{ pdowork.id }});
 
         $.ajax({
-            url: '/obj_data',
+            url: '{% url "obj_data" %}',
             data: data,
             cache: false,
             contentType: false,
