--- a/topografiya/templates/history.html
+++ b/topografiya/templates/history.html
@@ -1,6 +1,8 @@
 {% extends 'master.html' %}
 
 {% load static %}
+{% load i18n %}
+
 {% block title %} Архив {% endblock %}
 
 {% block content%}
@@ -9,18 +11,11 @@
 
 {% endblock stylecontent %}
 
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
-   <script  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 
-<script>
-$(document).ready(function () {
-  $('#dtBasicExample').DataTable({
-    "paging": false // false to disable pagination (or any other option)
-  });
-  $('.dataTables_length').addClass('bs-select');
-});
-    </script>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+
+{#<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/bulma.min.css">#}
+{#<link rel="stylesheet" type="text/css" href="  https://cdn.datatables.net/1.11.5/css/dataTables.bulma.min.css">#}
 
 
 {% csrf_token %}
@@ -46,11 +41,11 @@ $(document).ready(function () {
                     <div class="col-sm-12">
                         <div class="card">
                             <div class="card-header">
-                                <h5>Сведения о поступивших в архив работах</h5>
+                                <h5>{% trans "Сведения о поступивших в архив работах" %}</h5>
                             </div>
 
-                            <div class="card-body">
-                                <form action="" id="search_field">
+{#                            <div class="card-body">#}
+{#                                <form action="" id="search_field">#}
 {#                                    <div class="row">#}
 {#                                        <div class="col-md-12">#}
 {#                                            {{ myfilter.form }}#}
@@ -87,39 +82,40 @@ $(document).ready(function () {
 {#                                        </div>#}
 {#                                    </div>#}
 
-                                    <div class="row">
+{#                                    <div class="row">#}
+{##}
+{#                                        <div class="col-md-12">#}
+{##}
+{#                                             <div class="input-group">#}
+{#                                                <span class="input-group-text"><i class="fa fa-search"></i> </span>#}
+{#                                                <input id="myInput" type="text" class="form-control" placeholder="Поиск информацию..">#}
+{#                                              </div>#}
+{##}
+{#                                        </div>#}
+{##}
+{#                                    </div>#}
 
-                                        <div class="col-md-12">
-
-                                             <div class="input-group">
-                                                <span class="input-group-text"><i class="fa fa-search"></i> </span>
-                                                <input id="myInput" type="text" class="form-control" placeholder="Поиск информацию..">
-                                              </div>
-
-                                        </div>
-
-                                    </div>
-
-                                </form>
-                            </div>
+{#                                </form>#}
+{#                            </div>#}
 
 
 
                             <div class="table-responsive p-l-30 p-r-30 p-b-30">
-                                <table id="dtBasicExample"  class="table table-bordered table-sm" cellspacing="0" width="100%">
+
+                               <table id="example" class="table table-bordered" style="width:100%">
                                     <thead class="table-primary">
                                     <tr>
                                         <th class="text-center" scope="col">№</th>
-                                        <th scope="col"><b>Испонитель</b></th>
-                                        <th scope="col"><b>Наименование организации</b></th>
-                                        <th scope="col"><b>Наименование объекта</b></th>
-                                        <th scope="col"><b>Номер договора</b></th>
-                                        <th scope="col"><b>Дата договора</b></th>
-                                        <th scope="col" class="text-center"><b>Cрок</b></th>
-                                        <th scope="col" class="text-center">Смотреть</th>
+                                        <th scope="col"><b>{% trans "Испонитель" %}</b></th>
+                                        <th scope="col"><b>{% trans "Наименование организации" %}</b></th>
+                                        <th scope="col"><b>{% trans "Наименование объекта" %}</b></th>
+                                        <th scope="col"><b>{% trans "Номер договора" %}</b></th>
+                                        <th scope="col"><b>{% trans "Дата договора" %}</b></th>
+                                        <th scope="col" class="text-center"><b>{% trans "Cрок" %}</b></th>
+                                        <th scope="col" class="text-center">{% trans "Смотреть" %}</th>
                                     </tr>
                                     </thead>
-                                    <tbody id="search_item">
+                                    <tbody id="search_item" >
 
                                     {% for work in works %}
                                         <tr>
@@ -132,7 +128,7 @@ $(document).ready(function () {
                                             <td class="text-center">{{ work.object.pdowork.work_term}} kun</td>
                                             <td class="text-center">
                                                 <a href="{% url 'show_all_works' id=work.object.id %}">
-                                                    <button class="btn btn-outline-primary">Смотреть</button>
+                                                    <button class="btn btn-outline-primary">{% trans "Смотреть" %}</button>
                                                 </a>
                                             </td>
                                         </tr>
@@ -141,40 +137,28 @@ $(document).ready(function () {
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="col-xl-12">
-                                <nav class="float-end p-b-30 p-r-30">
-                                    <ul class="pagination pagination-primary">
-                                        <li class="page-item disabled"><a class="page-link" href="javascript:void(0)" tabindex="-1">Предыдущий</a></li>
-                                        <li class="page-item active"><a class="page-link" href="javascript:void(0)">1</a></li>
-                                        <li class="page-item"><a class="page-link" href="javascript:void(0)">2<span class="sr-only"></span></a></li>
-                                        <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-                                        <li class="page-item"><a class="page-link" href="javascript:void(0)">Далее</a>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
+{#                            <div class="col-xl-12">#}
+{#                                <nav class="float-end p-b-30 p-r-30">#}
+{#                                    <ul class="pagination pagination-primary">#}
+{#                                        <li class="page-item disabled"><a class="page-link" href="javascript:void(0)" tabindex="-1">Предыдущий</a></li>#}
+{#                                        <li class="page-item active"><a class="page-link" href="javascript:void(0)">1</a></li>#}
+{#                                        <li class="page-item"><a class="page-link" href="javascript:void(0)">2<span class="sr-only"></span></a></li>#}
+{#                                        <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>#}
+{#                                        <li class="page-item"><a class="page-link" href="javascript:void(0)">Далее</a>#}
+{#                                        </li>#}
+{#                                    </ul>#}
+{#                                </nav>#}
+{#                            </div>#}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+{#    </div>#}
+{#</div>#}
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-
-<script>
-$(document).ready(function(){
-  $("#myInput").on("keyup", function() {
-    var value = $(this).val().toLowerCase();
-    $("#search_item tr").filter(function() {
-      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-    });
-  });
-});
-</script>
 
 
 {##}
@@ -233,3 +217,28 @@ $(document).ready(function(){
 {#</script>#}
 
 {% endblock %}
+
+   {% block scriptcontent %}
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+{#<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>#}
+{#<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>#}
+
+
+<script>
+$(document).ready(function(){
+  $("#myInput").on("keyup", function() {
+    var value = $(this).val().toLowerCase();
+    $("#search_item tr").filter(function() {
+      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+    });
+  });
+});
+</script>
+
+<script>
+$(document).ready(function() {
+    $('#example').DataTable();
+} );
+    </script>
+
+    {% endblock scriptcontent %}
