--- a/topografiya/templates/leader/polevoy/checking_polevoy_works.html
+++ b/topografiya/templates/leader/polevoy/checking_polevoy_works.html
@@ -5226,7 +5226,7 @@
     data.append('id',{{ pdowork.id }});
 
         $.ajax({
-            url: '/obj_data',
+            url: '{% url "obj_data" %}',
             data: data,
             cache: false,
             contentType: false,
