--- a/topografiya/templates/worker/object_poyasitelniy_form.html
+++ b/topografiya/templates/worker/object_poyasitelniy_form.html
@@ -1,6 +1,8 @@
 {% extends 'master.html' %}
 
 {% load static %}
+{% load i18n %}
+
 {% block title %} Forma{% endblock %}
 
 {% block content%}
@@ -14,17 +16,17 @@
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-10">
-                            <h3>ПОЯСНИТЕЛЬНАЯ ЗАПИСКА</h3>
+                            <h3>{% trans "ПОЯСНИТЕЛЬНАЯ ЗАПИСКА" %}</h3>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="fa fa-home f-20"></i></a></li>
                                 {% if work.status_geodezis_komeral == 2 %}
-                                    <li class="breadcrumb-item"><a href="{% url 'leader_komeral_checking' %}">Главный геодезический контроль</a></li>
+                                    <li class="breadcrumb-item"><a href="{% url 'leader_komeral_checking' %}">{% trans "Главный геодезический контроль" %}</a></li>
                                     {% elif work.status_geodezis_komeral == 1 %}
-                                         <li class="breadcrumb-item"><a href="{% url 'leader_komeral_checking' %}">Главный геодезический контроль</a></li>
+                                         <li class="breadcrumb-item"><a href="{% url 'leader_komeral_checking' %}">{% trans "Главный геодезический контроль" %}</a></li>
                                     {% elif aktkomeral.status == 2 %}
-                                         <li class="breadcrumb-item"><a href="{% url 'worker_komeral_works' %}">Главный геодезический контроль</a></li>
+                                         <li class="breadcrumb-item"><a href="{% url 'worker_komeral_works' %}">{% trans "Главный геодезический контроль" %}</a></li>
                                 {% else %}
-                                    <li class="breadcrumb-item"><a href="{% url 'polevoy_works' %}">Полевой контроль</a></li>
+                                    <li class="breadcrumb-item"><a href="{% url 'polevoy_works' %}">{% trans "Полевой контроль" %}</a></li>
                                 {% endif %}
 
                                 {% if work.status_geodezis_komeral == 2 %}
@@ -38,20 +40,20 @@
                                 {% endif %}
 
                                 {% if work.status_geodezis_komeral == 2 %}
-                                <li class="breadcrumb-item"><a href="{% url 'object_poyasitelniy_form' id=work.object.id %}">ПОЯСНИТЕЛЬНАЯ ЗАПИСКА</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'object_poyasitelniy_form' id=work.object.id %}">{% trans "ПОЯСНИТЕЛЬНАЯ ЗАПИСКА" %}</a></li>
                                  {% else %}
-                                <li class="breadcrumb-item"><a href="{% url 'object_poyasitelniy_form' id=work.object.id %}">ПОЯСНИТЕЛЬНАЯ ЗАПИСКА</a></li>
+                                <li class="breadcrumb-item"><a href="{% url 'object_poyasitelniy_form' id=work.object.id %}">{% trans "ПОЯСНИТЕЛЬНАЯ ЗАПИСКА" %}</a></li>
                                 {% endif %}
 {#                                <li class="breadcrumb-item">По топографо-геодезическим работам</li>#}
                             </ol>
                         </div>
                     <div class="col-sm-2">
                         {% if work.status == 0 %}
-                            <a href="{% url 'polevoy_work_doing' id=work.object.id %}" class="btn btn-primary"> <i class="fa fa-backward"></i> Назад</a>
+                            <a href="{% url 'polevoy_work_doing' id=work.object.id %}" class="btn btn-primary"> <i class="fa fa-backward"></i> {% trans "Назад" %}</a>
                         {% endif %}
 
                         {% if aktkomeral.status == 2 %}
-                            <a href="{% url 'show_rejected_komeral_works' id=work.object.id %}" class="btn btn-primary"> <i class="fa fa-backward"></i> Назад</a>
+                            <a href="{% url 'show_rejected_komeral_works' id=work.object.id %}" class="btn btn-primary"> <i class="fa fa-backward"></i> {% trans "Назад" %}</a>
                         {% endif %}
 
 
@@ -382,18 +384,18 @@
                                                     </div>
 
                                                      {% if work.status == 0 %}
-                                                        <button class="btn btn-success store" type="button" status-id="0"> <i class="fa fa-check"></i> Сохранить</button>
+                                                        <button class="btn btn-success store" type="button" status-id="0"> <i class="fa fa-check"></i> {% trans "Сохранить" %}</button>
                                                      {% endif %}
 
                                                     {% if aktkomeral.status == 2 %}
-                                                        <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Сохранить</button>
+                                                        <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> {% trans "Сохранить" %}</button>
                                                      {% endif %}
 
                                                     {% if work.status_geodezis_komeral == 2 %}
                                                          <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> %}</button>
                                                      {% endif %}
 
-                                                    <button class="btn btn-primary nextBtn pull-right" type="button">Следующий  <i class="fa fa-long-arrow-right"></i></button>
+                                                    <button class="btn btn-primary nextBtn pull-right" type="button">{% trans "Следующий" %}  <i class="fa fa-long-arrow-right"></i></button>
                                                 </div>
                                             </div>
                                         </div>
@@ -705,18 +707,18 @@
                                         </div>
 
                                         {% if work.status == 0 %}
-                                            <button class="btn btn-success store" type="button" status-id="0"> <i class="fa fa-check"></i> Сохранить</button>
+                                            <button class="btn btn-success store" type="button" status-id="0"> <i class="fa fa-check"></i> {% trans "Сохранить" %}</button>
                                         {% endif %}
 
                                          {% if aktkomeral.status == 2 %}
-                                                        <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Сохранить</button>
+                                                        <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> {% trans "Сохранить" %}</button>
                                                      {% endif %}
 
                                          {% if work.status_geodezis_komeral == 2 %}
-                                             <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Сохранить</button>
+                                             <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> {% trans "Сохранить" %}</button>
                                          {% endif %}
 
-                                        <button class="btn btn-primary nextBtn pull-right" type="button">Следующий  <i class="fa fa-long-arrow-right"></i></button>
+                                        <button class="btn btn-primary nextBtn pull-right" type="button">{% trans "Следующий" %}  <i class="fa fa-long-arrow-right"></i></button>
                                     </div>
 
 
@@ -797,19 +799,19 @@
 {#                                                </div>#}
 {#                                            </div>#}
                                               {% if work.status == 0 %}
-                                                     <button class="btn btn-primary nextBtn pull-right store" status-id="1" type="button">Закончить</button>
+                                                     <button class="btn btn-primary nextBtn pull-right store" status-id="1" type="button"> {% trans "Закончить" %}</button>
                                              {% endif %}
 
                                             {% if work.status == 2 %}
-                                                     <button class="btn btn-primary nextBtn pull-right store" type="button">Закончить</button>
+                                                     <button class="btn btn-primary nextBtn pull-right store" type="button">{% trans "Закончить" %}</button>
                                              {% endif %}
 
                                             {% if  work.status_geodezis_komeral == 2 %}
-                                                     <button class="btn btn-primary nextBtn pull-right store" type="button">Закончить</button>
+                                                     <button class="btn btn-primary nextBtn pull-right store" type="button">{% trans "Закончить" %}</button>
                                              {% endif %}
 
                                             {% if aktkomeral.status == 2 %}
-                                                <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> Закончить</button>
+                                                <button class="btn btn-success store" type="button"> <i class="fa fa-check"></i> {% trans "Закончить" %}</button>
                                             {% endif %}
 
 
@@ -1117,12 +1119,12 @@
                                                         </div>
                                                     </div>
                                                      {% if work.status == 0 or work.status == 2  or work.status_geodezis_komeral == 2 %}
-                                                            <button class="btn btn-success edit_poyasitelniy" type="button" status-id="0"> <i class="fa fa-check"></i> Сохранить</button>
+                                                            <button class="btn btn-success edit_poyasitelniy" type="button" status-id="0"> <i class="fa fa-check"></i> {% trans "Сохранить" %}</button>
                                                      {% endif %}
                                                      {% if aktkomeral.status == 2 %}
-                                                        <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> Сохранить</button>
+                                                        <button class="btn btn-success edit_poyasitelniy" type="button"> <i class="fa fa-check"></i> {% trans "Сохранить" %}</button>
                                                      {% endif %}
-                                                    <button class="btn btn-primary nextBtn pull-right" type="button">Следующий  <i class="fa fa-long-arrow-right"></i></button>
+                                                    <button class="btn btn-primary nextBtn pull-right" type="button">{% trans "Следующий" %}  <i class="fa fa-long-arrow-right"></i></button>
 
                                                 </div>
                                             </div>
@@ -1434,12 +1436,12 @@
                                         </div>
 
                                         {% if work.status == 0 or work.status == 2 or work.status_geodezis_komeral == 2 %}
-                                             <button class="btn btn-success edit_poyasitelniy" type="button" status-id="0"> <i class="fa fa-check"></i> Сохранить</button>
+                                             <button class="btn btn-success edit_poyasitelniy" type="button" status-id="0"> <i class="fa fa-check"></i> {% trans "Сохранить" %}</button>
                                          {% endif %}
                                          {% if aktkomeral.status == 2 %}
-                                                        <button class="btn btn-success edit_poyasitelniy" status-id="0" type="button"> <i class="fa fa-check"></i> Сохранить</button>
+                                                        <button class="btn btn-success edit_poyasitelniy" status-id="0" type="button"> <i class="fa fa-check"></i> {% trans "Сохранить" %}</button>
                                          {% endif %}
-                                        <button class="btn btn-primary nextBtn pull-right" type="button">Следующий  <i class="fa fa-long-arrow-right"></i></button>
+                                        <button class="btn btn-primary nextBtn pull-right" type="button">{% trans "Следующий" %}  <i class="fa fa-long-arrow-right"></i></button>
                                     </div>
                                     </div>
 
@@ -1516,17 +1518,17 @@
 {#                                                </div>#}
 {#                                            </div>#}
                                              {% if work.status == 0 %}
-                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">Закончить</button>
+                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">{% trans "Закончить" %}</button>
                                              {% endif %}
                                             {% if work.status == 2 %}
-                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">Закончить</button>
+                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">{% trans "Закончить" %}</button>
                                              {% endif %}
                                             {% if  work.status_geodezis_komeral == 2 %}
-                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">Закончить</button>
+                                                     <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">{% trans "Закончить" %}</button>
                                              {% endif %}
 
                                             {% if aktkomeral.status == 2 %}
-                                                        <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">Закончить</button>
+                                                        <button class="btn btn-primary nextBtn pull-right edit_poyasitelniy" status-id="1" type="button">{% trans "Закончить" %}</button>
                                             {% endif %}
 
 
